# discord-song-bot

./: .breakpoints  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt
bot/: insult_service.py  main.py  playlist_service.py  queue_service.py  scratch.py  tests.py
bot/models/: playlist.py  queue.py  queue_item.py
